docroot/css/custom.css
/* Color scheme imports */
@import url(color_schemes/yellow.css);
@import url(color_schemes/blue.css);

/* Basic page setup */
#skip-to-content,
#heading .community-title,
#heading .page-title, 
#navigation h1,
#breadcrumbs h1 {
	clip: rect(0 0 0 0);
	position: absolute;
}

body {
	background-color: white;
	font: 75%/1.4 Arial, Helvetica, Verdana, sans-serif;
}

#heading,
#content {
	background-color: #EEF0F2;
	padding: 0px 25px;
	box-shadow: 2px 2px 10px 1px black;
}

#heading,
#content,
#navigation {
	min-width: 960px;
	max-width: 80%;
	margin: auto;
}

/* Heading styles */
#heading {
	padding: 1px 25px;
}

#heading h1 a {
	box-shadow: 2px 2px 10px 1px #656565;
	border-radius: 10px;
	padding: 10px;
	background-color: white;
	text-decoration: none;
	font-size: .9em;
}

#heading h1 a:link,
#heading h1 a:hover,
#heading h1 a:visited {
	text-decoration: none;
	color: #656565;
}

#heading .site-name {
	border-top: 1px solid #656565;
	padding-top: 2px;
	margin-bottom: -6px;
}

#heading .site-name {
	display: block;
	text-align: center;
}

#heading .right-align {
	float: right;
	text-align: right;
	font-size: 1.1em;
	padding: 15px 5px;
	max-width: 250px;
}

#heading #greeting, 
#heading #language {
	display: block;
	padding-top: 5px;
}

#heading #greeting {
	text-align: center;
}

#heading #language {
	font-weight: bold;
}

#sign-in {
	background: url(../images/common/key.png) no-repeat 3px 50%;
	padding: 5px 5px 5px 25px;
	font-weight: bold;
	color: black;
}

/* Navigation styles */
#navigation .selected a, 
#navigation li.hover a, 
#navigation a:hover, 
#navigation a:focus, 
#navigation .child-menu li a, 
#navigation .yui3-dd-dragging, 
.lfr-navigation-proxy {
  color: #FFF;
  outline: 0;
  text-shadow: -1px -1px black; 
}

.nav_search {
	float: right;
	padding-top: 13px;
}

#navigation_bg {
	background: url("../images/nav-bg.png") repeat-x;
	background-size: contain;
	min-height: 50px;
}

#navigation a {
	color: white;
	font-size: 1.1em;
	font-weight: bold;
	text-decoration: none;
}

#navigation li {
	display: inline-block;
	padding: 10px 20px;
	margin: 1px 0px;
	border-radius: 3px;
}

#navigation li:hover {
	background: #272526;
}

#navigation li.selected {
	background: #272526;
	box-shadow: inset 0 1px 8px black;
}

#navigation ul {
	list-style: none;
	margin: auto;
	padding: 6px 350px 6px 0px;
}

/* Breadcrumb styles */
.site-breadcrumbs {
	margin: 0 0 5px;
	width: auto;
	padding: 5px 0px;
}

.site-breadcrumbs ul {
	background-color: white;
	border-radius: 3px;
	margin: 0;
	box-shadow: inset 1px 1px 2px 0px #A8A8A8;
}

.breadcrumbs li {
	display: inline-block;
	max-width: 50%;
	vertical-align: middle;
}

.breadcrumbs li span {
	background: url(../images/common/breadcrumbs.png) no-repeat 100% 50%;
	display: block;
	padding: .5em 15px .5em 10px;
}

.breadcrumb li.first {
	display: none;
}

/* Content styles */
#content {
	padding-bottom: 25px;
}

.portlet {
  	background-color: white;
  	border: 1px solid #C8C9CA;
  	box-shadow: 2px 2px 10px 1px #656565;
  	border-radius: 3px;
  	margin: 0 0 10px;
  	padding: 3px;
  	text-align: left; 
}

.portlet-title {
  	float: none;
  	font-weight: bold;
  	min-width: 50%;
  	padding: 5px;
	text-shadow: 1px 1px #FFF; 
}

.portlet-topper {
	background: #d4d4d4 url(../images/portlet/header_bg.png) repeat-x 0 0;
  	border: 1px solid black;
  	border-radius: 3px;
  	border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
  	font-size: 1.1em;
}

.lfr-portlet-title-editable {
	top: 315px !important;
}

